@@ -460,6 +460,40 @@ endif(X11_FOUND)
 
 add_definitions(-DLOCALEDIR=\\\"${LOCALEDIR}\\\")
 
+# -NDEBUG is automatically added to all release build types, so manually remove
+# this define from the related variables
+MESSAGE ("removing NDEBUG flag from CMAKE_CXX_FLAGS_RELEASE")
+separate_arguments(CMAKE_CXX_FLAGS_RELEASE)
+list(REMOVE_ITEM CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG")
+string(REPLACE ";" " " CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}" CACHE STRING "removed NDEBUG flag" FORCE)
+MESSAGE ("removing NDEBUG flag from CMAKE_C_FLAGS_RELEASE")
+separate_arguments(CMAKE_C_FLAGS_RELEASE)
+list(REMOVE_ITEM CMAKE_C_FLAGS_RELEASE "-DNDEBUG")
+string(REPLACE ";" " " CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}" CACHE STRING "removed NDEBUG flag" FORCE)
+MESSAGE ("removing NDEBUG flag from CMAKE_CXX_FLAGS_RELWITHDEBINFO")
+separate_arguments(CMAKE_CXX_FLAGS_RELWITHDEBINFO)
+list(REMOVE_ITEM CMAKE_CXX_FLAGS_RELWITHDEBINFO "-DNDEBUG")
+string(REPLACE ";" " " CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}" CACHE STRING "removed NDEBUG flag" FORCE)
+MESSAGE ("removing NDEBUG flag from CMAKE_C_FLAGS_RELWITHDEBINFO")
+separate_arguments(CMAKE_C_FLAGS_RELWITHDEBINFO)
+list(REMOVE_ITEM CMAKE_C_FLAGS_RELWITHDEBINFO "-DNDEBUG")
+string(REPLACE ";" " " CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO}")
+set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO}" CACHE STRING "removed NDEBUG flag" FORCE)
+MESSAGE ("removing NDEBUG flag from CMAKE_CXX_FLAGS_MINSIZEREL")
+separate_arguments(CMAKE_CXX_FLAGS_MINSIZEREL)
+list(REMOVE_ITEM CMAKE_CXX_FLAGS_MINSIZEREL "-DNDEBUG")
+string(REPLACE ";" " " CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL}")
+set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL}" CACHE STRING "removed NDEBUG flag" FORCE)
+MESSAGE ("removing NDEBUG flag from CMAKE_C_FLAGS_MINSIZEREL")
+separate_arguments(CMAKE_C_FLAGS_MINSIZEREL)
+list(REMOVE_ITEM CMAKE_C_FLAGS_MINSIZEREL "-DNDEBUG")
+string(REPLACE ";" " " CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL}")
+set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL}" CACHE STRING "removed NDEBUG flag" FORCE)
+
+
 # When the path starts with a / on a Unix system it's an absolute path.
 # This means that on Windows the path used is always relative.
 if(LOCALEDIR MATCHES "^/")
